--- a/app/views/images/index.erb
+++ b/app/views/images/index.erb
@@ -1,6 +1,6 @@
 <% if @session.key?(:id) then %>
 <h2>Welcome <%= User.find(@session[:id]).username %>!</h2> 
-<h3><a href="/new_image">Post new image</a> <a href="/logout">Logout</a></h3>
+<h3><a href="/images/new">Post new image</a> <a href="/logout">Logout</a></h3>
 <% else %>
 <h2>Please <a href="/signup">signup</a> or <a href="/login">login</a> to
 post.</h2>
@@ -8,9 +8,10 @@ post.</h2>
 
 <ul>
 <% Image.all.each do |i| %>
-  <li><p><%= i.src %></p>
-  <p><a href="/draw/<%= i.id %>">Draw Image</a></p>
-  <p><a href="/user/<%= i.user.id %>"><%= i.user.username %></a></p>
+  <li><p><%= i.name %></p>
+  <p><%= i.src %></p>
+  <p><a href="/images/<%= i.id %>/draw">Draw Image</a></p>
+  <p><a href="/users/<%= i.user.id %>"><%= i.user.username %></a></p>
   </li>
   
 <% end %>
