--- a/app/views/images/user_profile.erb
+++ b/app/views/images/user_profile.erb
@@ -1,6 +1,13 @@
-<h2>Tweets of <%=@user.username %></h2>
-  <%= if @user.tweets==[] then "This user has no tweet yet." end %>
-<% @user.tweets.each do |t| %>
-    <h3> <%= t.content %> </h3>
+<h2>Images of <%=@user.username %></h2>
+<% @user.images.each do |i| %>
+  <li><p><%= i.name %></p>
+  <p><%= i.src %></p>
+  <p><a href="/images/<%= i.id %>/draw">Draw Image</a></p>
+  <p><a href="/user/<%= i.user.id %>"><%= i.user.username %></a></p>
+  <% if @own %>
+  <p><a href="/images/<%= i.id %>/edit">Clange or delete</a></p>
   <% end %>
-<p><a href="/tweets">Show all user's tweets</a></p>
+  </li>
+<% end %>
+
+<p><a href="/images">Show all images</a></p>
