--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,3 +1,7 @@
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
 <h1>Signup:</h1>
 <form class="" action="/signup" method="post">
 <label>Username:
