--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,7 @@
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
 <h1>Log in:</h1>
 <form class="" action="/login" method="post">
 <label>
