reorganized link and style

--- a/app/views/images/edit_image.erb
+++ b/app/views/images/edit_image.erb
@@ -8,7 +8,7 @@
   <input type="input" name="name" value="<%= @image.name %>">
   </label><br>
   <label> Source code:
- <textarea name="src">
+ <textarea name="src" style="width:100%" rows="10">
  <%= @image.src %>
   </textarea>
   </label><br>
