--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Write and post your images here!</h1>
-<h2><a href="/images">Show Images</a></h2>
+<h1>Create and post your images here!</h1>
+<h2><a href="/images">Show All Images</a></h2>
 <h2><a href="/login">Login</a></h2>
 <h2><a href="/signup">Signup</a></h2>
