--- a/app/views/images/new.erb
+++ b/app/views/images/new.erb
@@ -4,8 +4,10 @@
   <input type="input" name="name" value="">
   </label><br>
   <label> Source code:
-  <textarea name="src">
+  <textarea name="src" style="width:100%" rows="10">
   </textarea>
   </label><br>
   <input type="submit" value="Create new image">
 </form>
+
+<p><a href="/images">Show all images</a></p>
