--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,8 @@
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
+
 <h1>Create and post your images here!</h1>
 <h2><a href="/images">Show All Images</a></h2>
 <h2><a href="/login">Login</a></h2>
