--- a/app/views/images/edit_image.erb
+++ b/app/views/images/edit_image.erb
@@ -18,3 +18,5 @@
 <form class="" action="/images/<%=@image.id.to_s%>/delete" method="post">
   <input type="submit" value="Delete">
 </form>
+
+<p><a href="/images">Back to all images</a></p>
