--- a/app/views/images/index.erb
+++ b/app/views/images/index.erb
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<header>
+</header>
+<body>
+
 <% if flash.has?(:message) %>
   <%= flash[:message] %>
 <% end %>
@@ -19,3 +25,6 @@ post.</h2>
   
 <% end %>
 </ul>
+
+</body>
+</html>
