--- a/app/views/images/index.erb
+++ b/app/views/images/index.erb
@@ -9,11 +9,11 @@
 <% end %>
 
 <% if @session.key?(:id) then %>
-<h2>Welcome <%= User.find(@session[:id]).username %>!</h2> 
+<h3>Welcome <%= current_user.username %>!</h3> 
 <h3><a href="/images/new">Post new image</a> <a href="/logout">Logout</a></h3>
 <% else %>
-<h2>Please <a href="/signup">signup</a> or <a href="/login">login</a> to
-post.</h2>
+<h3>Please <a href="/signup">signup</a> or <a href="/login">login</a> to
+post.</h3>
 <% end %>
 
 <ul>
