--- a/app/views/images/user_profile.erb
+++ b/app/views/images/user_profile.erb
@@ -1,5 +1,5 @@
 <% if @session.key?(:id) then %>
-<h2>Welcome <%= User.find(@session[:id]).username %>!</h2> 
+<h3>Welcome <%= current_user.username %>!</h3> 
 <h3><a href="/images/new">Post new image</a> <a href="/logout">Logout</a></h3>
 <% else %>
 <h2>Please <a href="/signup">signup</a> or <a href="/login">login</a> to
@@ -7,12 +7,12 @@ post.</h2>
 <% end %>
 
 
-<h2>Images of <%=@user.username %></h2>
+<h2>Images by <%=@user.username %></h2>
 <ul>
 <% @user.images.each do |i| %>
   <li><p><a href="/images/<%= i.id %>/draw"><%= i.name %></a></p>
   <p><%= i.src %></p>
-  <p><a href="/user/<%= i.user.id %>"><%= i.user.username %></a></p>
+  <p><a href="/users/<%= i.user.id %>"><%= i.user.username %></a></p>
   </li>
 <% end %>
 </ul>
