--- a/app/views/images/index.erb
+++ b/app/views/images/index.erb
@@ -8,7 +8,7 @@
   <%= flash[:message] %>
 <% end %>
 
-<% if @session.key?(:id) then %>
+<% if logged_in? then %>
 <h3>Welcome <%= current_user.username %>!</h3> 
 <h3><a href="/images/new">Post new image</a> <a href="/logout">Logout</a></h3>
 <% else %>
