--- a/app/views/images/new.erb
+++ b/app/views/images/new.erb
@@ -1,4 +1,4 @@
-<h1>Welcome, <%=@user.username %></h1>
+<h1>Welcome, <%= current_user.username %></h1>
 <form class="" action="/images" method="post">
   <label> Title:
   <input type="input" name="name" value="">
