--- a/app/views/images/user_profile.erb
+++ b/app/views/images/user_profile.erb
@@ -1,4 +1,4 @@
-<% if @session.key?(:id) then %>
+<% if logged_in? then %>
 <h3>Welcome <%= current_user.username %>!</h3> 
 <h3><a href="/images/new">Post new image</a> <a href="/logout">Logout</a></h3>
 <% else %>
